--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="registro.html">Registro</a></li>
             <li><a href="lenguajes.html">Lenguajes</a></li>
-            <li><a href="validacion.html">Validación</a></li>
+            <li><a href="validacion.html">Validacion</a></li>
+            <li><a href="cursos.html">Cursos</a></li>
         </ul>
     </nav>
     <main>
